# optic

./: README  build-static  run-cmake-debug  run-cmake-debug-macos  run-cmake-release  run-cmake-release-macos
.github/workflows/: builder.yml
optic/src/VALfiles/: TimSupport.cpp  Validator.cpp
optic/src/optic/: FFEvent.cpp
src/: CMakeLists.txt  CMakeLists.txt-almost
src/VALfiles/: Proposition.cpp  Relax.cpp  RepairAdvice.cpp  RepairAdvice.h  TIM.cpp  TypeStrip.cpp  TypedAnalyser.cpp  TypedAnalyser.h  Validator.cpp  instantiation.cpp
src/VALfiles/misc/: DYNA.cpp  LPGP.cpp
src/VALfiles/parsing/: ptree.cpp  ptree.h
src/optic/: CMakeLists.txt  FFEvent.cpp  FFSolver.cpp  FFSolver.h  PreferenceHandler.cpp  PreferenceHandler.h  RPGBuilder.cpp  RPGBuilder.h  RPGBuilderEvaluation.cpp  minimalstate.h  numericanalysis.cpp  opticMain.cpp
